# 2022_autumn_final_work

./: AI.cpp  AI.h  CMakeLists.txt  README.md  checkboard.cpp  checkboard.h  easyxfunctions.cpp  easyxfunctions.h  filedealer.cpp  filedealer.h  main.cpp  pages.cpp  pages.h  win_checker.cpp  win_checker.h  xytranslator.cpp  xytranslator.h
memory/: allthegame.out  lastgame.out
